<resources>
    <string name="app_name">Places Search</string>
    <string name="results_activity">Search results</string>
    <string name="action_settings">Settings</string>
    <string name="text_fav">FAVORITES</string>
    <string name="text_search">SEARCH</string>
    <string name="text_info">INFO</string>
    <string name="text_photos">PHOTOS</string>
    <string name="text_map">MAP</string>
    <string name="text_reviews">REVIEWS</string>
    <string name="keyword_label">Keyword</string>
    <string name="keyword_placeholder">Enter keyword</string>
    <string name="category_label">Category</string>
    <string name="distance_label">Distance (in miles)</string>
    <string name="distance_placeholder">Enter distance (default 10 miles)</string>
    <string name="from_label">From</string>
    <string name="current_loc_label">Current Location</string>
    <string name="other_loc_label">Other. Specify Location</string>
    <string name="other_loc_placeholder">Type in the location</string>
    <string name="btn_search_label">Search</string>
    <string name="btn_clear_label">Clear</string>
    <string name="no_favorites">No favorites</string>
    <string name="mandatory_field_msg">Please enter mandatory field</string>
    <string name="field_error_msg">Please fix all fields with errors</string>
    <string name="fetching_results">Fetching results</string>
    <string name="btn_prev_label">PREVIOUS</string>
    <string name="btn_next_label">NEXT</string>
    <string name="map_from_text">From</string>
    <string name="map_hint_text">Type in the Location</string>
    <string name="map_travel_mode">Travel mode</string>
    <string name="maps_web_api">AIzaSyA_NhluopOgKm1DhlpxCZebkdwgPqOfItQ</string>
    <string name="maps_android_api">AIzaSyAY81543GmGrUPk3R2hTOhTTdy3Bd_Os38</string>

    <!--Dropdowns-->
    <string-array name="driving_mode">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>


    <string-array name="categories">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="review_source">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>

    <string-array name="review_sort_method">
        <item>Default Order</item>
        <item>Highest Rating</item>
        <item>Lowest Rating</item>
        <item>Most Recent</item>
        <item>Least Recent</item>
    </string-array>


</resources>
