<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="entertainment.search.placessearch.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="574dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/keyword_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/keyword_label"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/mandatory_msg_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/erroMsg"
            android:text="@string/mandatory_field_msg"
            android:textAlignment="center"
            android:visibility="gone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/keyword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/border_color_active"
            android:hint="@string/keyword_placeholder"
            android:inputType="text"
            android:focusable="true"
            android:textCursorDrawable="@drawable/cursor_color" />


        <TextView
            android:id="@+id/category_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/category_label"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_marginTop="2dp"
            android:layout_width="fill_parent"
            android:entries="@array/categories"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="2dp"
            android:text="@string/distance_label"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/distance_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/border_color"
            android:hint="@string/distance_placeholder"
            android:textCursorDrawable="@drawable/cursor_color"
            android:inputType="text" />

        <TextView
            android:id="@+id/from_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/from_label"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:id="@+id/radio_loc_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_current_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/webtech_pink"
                android:text="@string/current_loc_label" />


            <RadioButton
                android:id="@+id/radio_other_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:buttonTint="#000"
                android:text="@string/other_loc_label" />

        </RadioGroup>

        <TextView
            android:id="@+id/mandatory_msg_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/erroMsg"
            android:text="@string/mandatory_field_msg"
            android:textAlignment="center"
            android:visibility="gone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
            android:id="@+id/other_loc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/border_color"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/other_loc_placeholder"
            app:pacv_googleMapsApiKey="AIzaSyA_NhluopOgKm1DhlpxCZebkdwgPqOfItQ"
            android:focusable="false"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:onClick="onClick"
                android:text="@string/btn_search_label" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:onClick="onClick"
                android:text="@string/btn_clear_label" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>