<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="entertainment.search.placessearch.DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="574dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/map_from_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/map_from_text"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/mandatory_msg_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/erroMsg"
            android:text="@string/mandatory_field_msg"
            android:textAlignment="center"
            android:visibility="gone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
            android:id="@+id/map_from_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/border_color_active"
            android:hint="@string/map_hint_text"
            android:inputType="text"
            android:focusable="true"
            app:pacv_googleMapsApiKey="AIzaSyA_NhluopOgKm1DhlpxCZebkdwgPqOfItQ"
            android:textCursorDrawable="@drawable/cursor_color" />


        <TextView
            android:id="@+id/map_travel_mode_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/map_travel_mode"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinner_map"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <FrameLayout

            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>










    </LinearLayout>

</RelativeLayout>